--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700,900" rel="stylesheet">
 
-    <title>Elegance - Creative HTML5 Template</title>
+    <title>Álvaro Martín Salazar</title>
 <!--
 Elegance Template
 https://templatemo.com/tm-528-elegance
@@ -54,12 +54,12 @@ https://templatemo.com/tm-528-elegance
                             <div class="nav-box navbar-collapse">
                                 <ul class="navigation-menu nav navbar-nav navbars" id="nav">
                                     <li data-menuanchor="slide01" class="active"><a href="#slide01">Home</a></li>
-                                    <li data-menuanchor="slide02"><a href="#slide02">About Me</a></li>
-                                    <li data-menuanchor="slide03"><a href="#slide03">Services</a></li>
-                                    <li data-menuanchor="slide04"><a href="#slide04">My Skills</a></li>
-                                    <li data-menuanchor="slide05"><a href="#slide05">My Work</a></li>
-                                    <li data-menuanchor="slide06"><a href="#slide06">Testimonials</a></li>
-                                    <li data-menuanchor="slide07"><a href="#slide07">Contact Me</a></li>
+                                    <li data-menuanchor="slide02"><a href="#slide02">Sobre mí</a></li>
+                                    <li data-menuanchor="slide03"><a href="#slide03">Servicios</a></li>
+                                    <li data-menuanchor="slide04"><a href="#slide04">Habilidades</a></li>
+                                    <li data-menuanchor="slide05"><a href="#slide05">Mis Trabajos</a></li>
+                                    <!-- <li data-menuanchor="slide06"><a href="#slide06">Testimonials</a></li> -->
+                                    <li data-menuanchor="slide07"><a href="#slide07">Contacto</a></li>
                                 </ul>
                             </div>
                         </nav>
