--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@ https://templatemo.com/tm-528-elegance
                                             <div class="input-field">
                                                 <textarea class="form-control" name="message" id="message" required placeholder="Message"></textarea>
                                             </div>
-                                            <button class="btn" type="submit">Submit</button>
+                                            <button class="btn" type="submit">Enviar</button>
                                         </form>
                                         <div id="form-messages" class="mt-3"></div>
                                     </div>
