--- a/index.html
+++ b/index.html
@@ -454,13 +454,13 @@ https://templatemo.com/tm-528-elegance
                                     <div class="col-md-6 animate" data-animate="fadeInUp">
                                         <form id="ajax-contact" method="post" action="#">
                                             <div class="input-field">
-                                                <input type="text" class="form-control" name="name" id="name" required placeholder="Name">
+                                                <input type="text" class="form-control" name="name" id="name" required placeholder="Nombre">
                                             </div>
                                             <div class="input-field">
                                                 <input type="email" class="form-control" name="email" id="email" required placeholder="Email">
                                             </div>
                                             <div class="input-field">
-                                                <textarea class="form-control" name="message" id="message" required placeholder="Message"></textarea>
+                                                <textarea class="form-control" name="message" id="message" required placeholder="Mensaje"></textarea>
                                             </div>
                                             <button class="btn" type="submit">Enviar</button>
                                         </form>
@@ -477,10 +477,8 @@ https://templatemo.com/tm-528-elegance
         <div id="social-icons">
             <div class="text-right">
                 <ul class="social-icons">
-                    <li><a href="#" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-                    <li><a href="#" title="Twitter"><i class="fa fa-twitter"></i></a></li>
                     <li><a href="#" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
-                    <li><a href="#" title="Instagram"><i class="fa fa-behance"></i></a></li>
+                    <!-- <li><a href="#" title="Instagram"><i class="fa fa-behance"></i></a></li> -->
                 </ul>
             </div>
         </div>
