--- a/index.html
+++ b/index.html
@@ -433,8 +433,8 @@ https://templatemo.com/tm-528-elegance
                     <div class="row justify-content-center">
                         <div class="col-md-7 wide-col-laptop">
                             <div class="title-block animate" data-animate="fadeInUp">
-                                <span>Contact</span>
-                                <h2>Get In Touch!</h2>
+                                <span>Contacto</span>
+                                <h2>¡Ponte en contacto!</h2>
                             </div>
                             <div class="contact-section">
                                 <div class="row">
