--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@ https://templatemo.com/tm-528-elegance
                                     <div class="col-md-6">
                                         <div class="about-contentbox">
                                             <div class="animate" data-animate="fadeInUp">
-                                                <span>About Me</span>
-                                                <h2>Who am i?</h2>
+                                                <span>Sobre mí</span>
+                                                <h2>¿Quién soy?</h2>
                                                 <p>Credits go to <strong>Unsplash</strong> and <strong>Pexels</strong> for photos and video used in this template. Vivamus tincidunt, augue rutrum convallis volutpat, massa lacus tempus leo.</p>
                                             </div>
                                             <div class="facts-list owl-carousel">
@@ -142,7 +142,7 @@ https://templatemo.com/tm-528-elegance
                     <div class="row justify-content-center">
                         <div class="col-md-8 wide-col-laptop">
                             <div class="title-block animate" data-animate="fadeInUp">
-                                <span>Services</span>
+                                <span>Servicios</span>
                                 <h2>What I Do?</h2>
                             </div>
                             <div class="services-section">
@@ -262,8 +262,8 @@ https://templatemo.com/tm-528-elegance
                     <div class="row justify-content-center">
                         <div class="col-md-8 wide-col-laptop">
                             <div class="title-block animate" data-animate="fadeInUp">
-                                <span>My Work</span>
-                                <h2>what i’ve done?</h2>
+                                <span>Mis trabajos</span>
+                                <h2>¿Que he hecho?</h2>
                             </div>
                             <div class="gallery-section">
                                 <div class="gallery-list owl-carousel">
