--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@ https://templatemo.com/tm-528-elegance
         <div id="social-icons">
             <div class="text-right">
                 <ul class="social-icons">
-                    <li><a href="https://www.linkedin/alvaromartinsalazar" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a href="https://www.linkedin.com/alvaromartinsalazar" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
                     <!-- <li><a href="#" title="Instagram"><i class="fa fa-behance"></i></a></li> -->
                 </ul>
             </div>
