--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@ https://templatemo.com/tm-528-elegance
             <div class="text-right">
                 <ul class="social-icons">
                     <li><a href="https://www.linkedin.com/in/alvaromartinsalazar" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
-                    <li><a href="#" title="Instagram"><i class="fa fa-behance"></i></a></li>
+                    <li><a href="https://github.com/alvaromartinsalazar/" title="Instagram"><i class="fa fa-github"></i></a></li>
                 </ul>
             </div>
         </div>
