--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ https://templatemo.com/tm-528-elegance
                                             <div class="animate" data-animate="fadeInUp">
                                                 <span>Sobre mí</span>
                                                 <h2>¿Quién soy?</h2>
-                                                <p>Credits go to <strong>Unsplash</strong> and <strong>Pexels</strong> for photos and video used in this template. Vivamus tincidunt, augue rutrum convallis volutpat, massa lacus tempus leo.</p>
+                                                <p>Soy una persona ambiciosa y competitiva conmigo mismo, me gusta trabajar en grupo porque aprendo de los demás mientras hay un buen ambiente de trabajo.</p>
                                             </div>
                                             <div class="facts-list owl-carousel">
                                                 <div class="item animate" data-animate="fadeInUp">
