--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ https://templatemo.com/tm-528-elegance
                         <div class="col-md-8 wide-col-laptop">
                             <div class="title-block animate" data-animate="fadeInUp">
                                 <span>Servicios</span>
-                                <h2>What I Do?</h2>
+                                <h2>¿Qué ofrezco?</h2>
                             </div>
                             <div class="services-section">
                                 <div class="services-list owl-carousel">
