--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@ https://templatemo.com/tm-528-elegance
                     <div class="row justify-content-center">
                         <div class="col-md-7 wide-col-laptop">
                             <div class="title-block animate" data-animate="fadeInUp">
-                                <span>My Skills</span>
-                                <h2>What i’m good?</h2>
+                                <span>Habilidades</span>
+                                <h2>¿Qué se hacer?</h2>
                             </div>
                             <div class="skills-row animate" data-animate="fadeInDown">
                                 <div class="row">
