--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ https://templatemo.com/tm-528-elegance
                                         </div>
                                     </div>
                                     <div class="col-md-6">
-                                        <figure class="about-img animate" data-animate="fadeInUp"><img src="images/AMS.jpg" class="rounded" alt=""></figure>
+                                        <figure class="about-img animate" data-animate="fadeInUp"><img src="images/AMS.jpg" class="rounded" alt="" height="70%"></figure>
                                     </div>
                                 </div>
                             </div>
