--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@ https://templatemo.com/tm-528-elegance
                                                 <i class="fa fa-map-marker"></i> Sevilla, España
                                             </div>
                                             <div class="contact-row">
-                                                <i class="fa fa-phone"></i> +34 657401653
+                                                <i class="fa fa-phone"></i> +34 *********
                                             </div>
                                             <div class="contact-row">
                                                 <i class="fa fa-envelope"></i> alvaromartinsalazar@gmail.com
@@ -523,7 +523,7 @@ https://templatemo.com/tm-528-elegance
         <div id="social-icons">
             <div class="text-right">
                 <ul class="social-icons">
-                    <li><a href="https://www.linkedin.com/in/alvaromartinsalazar" title="Linkedin"><i
+                    <li><a href="https://www.linkedin.com/in/alvaromartinsalazar" target="_blank" title="Linkedin"><i
                                 class="fa fa-linkedin"></i></a></li>
                     <li><a href="https://github.com/alvaromartinsalazar/" target="_blank" title="Github"><i
                                 class="fa fa-github"></i></a></li>
