--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ https://templatemo.com/tm-528-elegance
                             <button type="button" class="navbar-toggle"> <i class="fa fa-bars"></i> </button>
                             <div class="nav-box navbar-collapse">
                                 <ul class="navigation-menu nav navbar-nav navbars" id="nav">
-                                    <li data-menuanchor="slide01" class="active"><a href="#slide01">Home</a></li>
+                                    <li data-menuanchor="Home" class="active"><a href="Home">Home</a></li>
                                     <li data-menuanchor="slide02"><a href="#slide02">Sobre mí</a></li>
                                     <li data-menuanchor="slide03"><a href="#slide03">Servicios</a></li>
                                     <li data-menuanchor="slide04"><a href="#slide04">Habilidades</a></li>
@@ -75,7 +75,7 @@ https://templatemo.com/tm-528-elegance
 
         <div id="fullpage" class="fullpage-default">
 
-            <div class="section animated-row" data-section="slide01">
+            <div class="section animated-row" data-section="Home">
                 <div class="section-inner">
                     <div class="welcome-box">
                         <span class="welcome-first animate" data-animate="fadeInUp">Hola, bienvenid@ al Blog de</span>
@@ -416,60 +416,6 @@ https://templatemo.com/tm-528-elegance
                 </div>
             </div>
 
-            <!-- <div class="section animated-row" data-section="slide05"> -->
-            <!-- <div class="section-inner"> -->
-            <!-- <div class="row justify-content-center"> -->
-            <!-- <div class="col-md-8 wide-col-laptop"> -->
-            <!-- <div class="title-block animate" data-animate="fadeInUp"> -->
-            <!-- <span>TESTIMONIALS</span> -->
-            <!-- <h2>what THEY SAY?</h2> -->
-            <!-- </div> -->
-            <!-- <div class="col-md-8 offset-md-2"> -->
-            <!-- <div class="testimonials-section"> -->
-            <!-- <div class="testimonials-slider owl-carousel"> -->
-            <!-- <div class="item animate" data-animate="fadeInUp"> -->
-            <!-- <div class="testimonial-item"> -->
-            <!-- <div class="client-row"> -->
-            <!-- <img src="images/profile-01.jpg" class="rounded-circle" alt="profile 1"> -->
-            <!-- </div> -->
-            <!-- <div class="testimonial-content"> -->
-            <!-- <h4>Sandar</h4> -->
-            <!-- <p>"Ut varius leo eu mauris lacinia, eleifend posuere urna gravida. Aenean a mattis lacus."</p> -->
-            <!-- <span>Managing Director</span> -->
-            <!-- </div>                                            -->
-            <!-- </div> -->
-            <!-- </div> -->
-            <!-- <div class="item animate" data-animate="fadeInUp"> -->
-            <!-- <div class="testimonial-item"> -->
-            <!-- <div class="client-row"> -->
-            <!-- <img src="images/profile-01.jpg" class="rounded-circle" alt="profile 2"> -->
-            <!-- </div> -->
-            <!-- <div class="testimonial-content"> -->
-            <!-- <h4>Shinn</h4> -->
-            <!-- <p>"Nam iaculis, leo nec facilisis sollicitudin, dui massa tempus odio, vitae malesuada ante elit vitae eros."</p> -->
-            <!-- <span>CEO and Founder</span> -->
-            <!-- </div>                                            -->
-            <!-- </div> -->
-            <!-- </div> -->
-            <!-- <div class="item animate" data-animate="fadeInUp"> -->
-            <!-- <div class="testimonial-item"> -->
-            <!-- <div class="client-row"> -->
-            <!-- <img src="images/profile-01.jpg" class="rounded-circle" alt="profile 3"> -->
-            <!-- </div> -->
-            <!-- <div class="testimonial-content"> -->
-            <!-- <h4>Marlar</h4> -->
-            <!-- <p>"Etiam efficitur, tortor facilisis finibus semper, diam magna fringilla lectus, et fringilla felis urna posuere tortor."</p> -->
-            <!-- <span>Chief Marketing Officer</span> -->
-            <!-- </div>                                            -->
-            <!-- </div> -->
-            <!-- </div> -->
-            <!-- </div> -->
-            <!-- </div> -->
-            <!-- </div> -->
-            <!-- </div> -->
-            <!-- </div> -->
-            <!-- </div> -->
-            <!-- </div> -->
 
             <div class="section animated-row" data-section="slide06">
                 <div class="section-inner">
