--- a/index.html
+++ b/index.html
@@ -11,11 +11,7 @@
     <link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon">
 
     <title>Álvaro Martín Salazar</title>
-    <!--
-Elegance Template
-https://templatemo.com/tm-528-elegance
--->
-    <!-- Additional CSS Files -->
+
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 
     <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
@@ -54,7 +50,7 @@ https://templatemo.com/tm-528-elegance
                             <button type="button" class="navbar-toggle"> <i class="fa fa-bars"></i> </button>
                             <div class="nav-box navbar-collapse">
                                 <ul class="navigation-menu nav navbar-nav navbars" id="nav">
-                                    <li data-menuanchor="Home" class="active"><a href="Home">Home</a></li>
+                                    <li data-menuanchor="Home" class="active"><a href="#Home">Home</a></li>
                                     <li data-menuanchor="slide02"><a href="#slide02">Sobre mí</a></li>
                                     <li data-menuanchor="slide03"><a href="#slide03">Servicios</a></li>
                                     <li data-menuanchor="slide04"><a href="#slide04">Habilidades</a></li>
