--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             <button type="button" class="navbar-toggle"> <i class="fa fa-bars"></i> </button>
                             <div class="nav-box navbar-collapse">
                                 <ul class="navigation-menu nav navbar-nav navbars" id="nav">
-                                    <li data-menuanchor="Home" class="active"><a href="#Home">Home</a></li>
+                                    <li data-menuanchor="slide01" class="active"><a href="#slide01">Home</a></li>
                                     <li data-menuanchor="slide02"><a href="#slide02">Sobre mí</a></li>
                                     <li data-menuanchor="slide03"><a href="#slide03">Servicios</a></li>
                                     <li data-menuanchor="slide04"><a href="#slide04">Habilidades</a></li>
@@ -71,7 +71,7 @@
 
         <div id="fullpage" class="fullpage-default">
 
-            <div class="section animated-row" data-section="Home">
+            <div class="section animated-row" data-section="slide01">
                 <div class="section-inner">
                     <div class="welcome-box">
                         <span class="welcome-first animate" data-animate="fadeInUp">Hola, bienvenid@ al Blog de</span>
