--- a/index.html
+++ b/index.html
@@ -105,22 +105,22 @@
                                                 <div class="item animate" data-animate="fadeInUp">
                                                     <div class="counter-box">
                                                         <i class="fa fa-trophy counter-icon"
-                                                            aria-hidden="true"></i><span class="count-number">32</span>
+                                                            aria-hidden="true"></i><span class="count-number">1</span>
                                                         Awards Won
                                                     </div>
                                                 </div>
                                                 <div class="item animate" data-animate="fadeInUp">
                                                     <div class="counter-box">
                                                         <i class="fa fa-graduation-cap counter-icon"
-                                                            aria-hidden="true"></i><span class="count-number">4</span>
-                                                        Degrees
+                                                            aria-hidden="true"></i><span class="count-number">1</span>
+                                                        CFGS ASIR
                                                     </div>
                                                 </div>
                                                 <div class="item animate" data-animate="fadeInUp">
                                                     <div class="counter-box">
                                                         <i class="fa fa-desktop counter-icon"
-                                                            aria-hidden="true"></i><span class="count-number">12</span>
-                                                        Working Years
+                                                            aria-hidden="true"></i><span class="count-number">1</span>
+                                                        Año trabajando
                                                     </div>
                                                 </div>
                                                 <div class="item animate" data-animate="fadeInUp">
@@ -133,8 +133,8 @@
                                                 <div class="item animate" data-animate="fadeInUp">
                                                     <div class="counter-box">
                                                         <i class="fa fa-certificate counter-icon"
-                                                            aria-hidden="true"></i><span class="count-number">10</span>
-                                                        Certificates
+                                                            aria-hidden="true"></i><span class="count-number">14</span>
+                                                        Certificados
                                                     </div>
                                                 </div>
                                             </div>
