--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
                                                         Año trabajando
                                                     </div>
                                                 </div>
-                                                <div class="item animate" data-animate="fadeInUp">
+                                                <!-- <div class="item animate" data-animate="fadeInUp">
                                                     <div class="counter-box">
                                                         <i class="fa fa-support counter-icon"
                                                             aria-hidden="true"></i><span class="count-number">6</span>
                                                         Team Members
                                                     </div>
-                                                </div>
+                                                </div> -->
                                                 <div class="item animate" data-animate="fadeInUp">
                                                     <div class="counter-box">
                                                         <i class="fa fa-certificate counter-icon"
