--- a/index.html
+++ b/index.html
@@ -102,13 +102,13 @@
                                                     ambiente de trabajo.</p>
                                             </div>
                                             <div class="facts-list owl-carousel">
-                                                <div class="item animate" data-animate="fadeInUp">
+                                                <!-- <div class="item animate" data-animate="fadeInUp">
                                                     <div class="counter-box">
                                                         <i class="fa fa-trophy counter-icon"
                                                             aria-hidden="true"></i><span class="count-number">1</span>
                                                         Awards Won
                                                     </div>
-                                                </div>
+                                                </div> -->
                                                 <div class="item animate" data-animate="fadeInUp">
                                                     <div class="counter-box">
                                                         <i class="fa fa-graduation-cap counter-icon"
