Actualización seccion Habilidades

--- a/index.html
+++ b/index.html
@@ -252,28 +252,28 @@
                                 <div class="row">
                                     <div class="col-md-8 offset-md-2">
                                         <div class="skill-item">
-                                            <h6>HTML CSS</h6>
+                                            <h6>Montaje de servicios</h6>
                                             <div class="skill-bar">
-                                                <span>70%</span>
+                                                <span>80%</span>
                                                 <div class="filled-bar"></div>
                                             </div>
                                         </div>
                                         <div class="skill-item">
-                                            <h6>PSD Design</h6>
+                                            <h6>Proxmox</h6>
                                             <div class="skill-bar">
-                                                <span>90%</span>
+                                                <span>70%</span>
                                                 <div class="filled-bar-2"></div>
                                             </div>
                                         </div>
                                         <div class="skill-item">
-                                            <h6>Social Media</h6>
+                                            <h6>TIG (Monitorización y alertas)</h6>
                                             <div class="skill-bar">
-                                                <span>70%</span>
+                                                <span>85%</span>
                                                 <div class="filled-bar"></div>
                                             </div>
                                         </div>
                                         <div class="skill-item last-skill">
-                                            <h6>Leadership</h6>
+                                            <h6>Páginas web</h6>
                                             <div class="skill-bar">
                                                 <span>90%</span>
                                                 <div class="filled-bar-2"></div>
