--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                                             </div>
                                         </div>
                                         <div class="skill-item">
-                                            <h6>TIG (Monitorización y alertas)</h6>
+                                            <h6>Pila TIG</h6>
                                             <div class="skill-bar">
                                                 <span>85%</span>
                                                 <div class="filled-bar"></div>
