--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                                             <h6>Pila TIG</h6>
                                             <div class="skill-bar">
                                                 <span>85%</span>
-                                                <div class="filled-bar-3"></div>
+                                                <div id="filled-bar-3"></div>
                                             </div>
                                         </div>
                                         <div class="skill-item last-skill">
