--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="section animated-row" data-section="slide01">
                 <div class="section-inner">
                     <div class="welcome-box">
-                        <span class="welcome-first animate" data-animate="fadeInUp">Hola, bienvenid@ al Blog de</span>
+                        <span class="welcome-first animate" data-animate="fadeInUp">Hola, bienvenid@ a la Web de</span>
                         <h1 class="welcome-title animate" data-animate="fadeInUp">Álvaro</h1>
                         <p class="animate" data-animate="fadeInUp">Bienvenido a mi blog/portafolio. Aquí podrás conocer
                             más sobre mí, explorar los servicios que ofrezco, descubrir mis habilidades y ver algunos de
